Added code that uses Pytorch to train 2CNN->2Linear.

--- a/Code/process_website_images.ipynb
+++ b/Code/process_website_images.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -28,6 +28,7 @@
     "import imageio\n",
     "import cv2\n",
     "from PIL import Image\n",
+    "import pandas as pd\n",
     "import sys\n",
     "import os\n",
     "import csv\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
        "(3280, 144)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,13 +181,115 @@
     "image_pixels = image_size * image_size\n",
     "\n",
     "# Compress possible pixel values to the interval [0.01, 1] \n",
-    "train_imgs = np.asfarray(label_grade_imgpixels[:,2:146]) * 0.99/255 + 0.01\n",
+    "train_imgs = np.asfarray(label_grade_imgpixels[:,2:146], dtype='float32') * 0.99/255 + 0.01\n",
+    "label_grade_pixels = np.concatenate((np.asfarray(label_grade_imgpixels[:,0:2], dtype='float32'),train_imgs), axis=1)\n",
     "train_imgs.shape"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add headings to label_grade_pixels array and then write to csv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3280"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(label_grade_pixels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header = []\n",
+    "for i in range(len(label_grade_pixels[1])):\n",
+    "    if i==0:\n",
+    "        header.append(\"Label\")\n",
+    "    if i==1:\n",
+    "        header.append(\"Grade\")\n",
+    "    if i>1:\n",
+    "        header.append(\"Pixel\" + str(i-1))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_grade_pixels = pd.DataFrame(data=label_grade_pixels, columns=header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_grade_pixels.to_csv(\"../Data/label_grade_pixels.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Break up the total dataset into 70% training and 30% testing (some quick googling suggested this is a typical breakup for small datasets)\n",
+    " \n",
+    " Pandas DataFrame object class makes this simple with the df.sample and df.drop functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_train = 0.7*(label_grade_pixels.shape[0])\n",
+    "num_test = 0.3*(label_grade_pixels.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df=label_grade_pixels.sample(frac=0.7)\n",
+    "test_df=label_grade_pixels.drop(train_df.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.to_csv(\"../Data/train.csv\")\n",
+    "test_df.to_csv(\"../Data/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +304,7 @@
        "       [0., 0., 1., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,13 +319,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get rid of all zeroes of ones\n",
+    "# Get rid of all zeroes o ones\n",
     "OneHotGrades[OneHotGrades==0] = 0.01\n",
     "OneHotGrades[OneHotGrades==1] = 0.99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6560, 10)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OneHotGrades.shape"
    ]
   },
   {
